Изменена зависимость модулей по api, скорректированы вызовы, скорректировано БД