@@ -1,62 +1,66 @@
 package ru.practicum.service.compilation;
 
-import jakarta.ws.rs.NotFoundException;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import ru.practicum.client.EventClient;
-import ru.practicum.event.dto.compilation.CompilationDto;
-import ru.practicum.event.dto.compilation.NewCompilationDto;
-import ru.practicum.event.dto.event.EventShortDto;
+import ru.practicum.client.UserClient;
+import ru.practicum.dto.category.CategoryDto;
+import ru.practicum.dto.compilation.CompilationDto;
+import ru.practicum.dto.compilation.NewCompilationDto;
+import ru.practicum.dto.event.EventShortDto;
+import ru.practicum.dto.user.UserShortDto;
+import ru.practicum.exception.NotFoundException;
 import ru.practicum.mapper.CompilationMapper;
+import ru.practicum.mapper.EventMapper;
+import ru.practicum.model.Category;
 import ru.practicum.model.Compilation;
+import ru.practicum.model.Event;
+import ru.practicum.repository.CategoryRepository;
 import ru.practicum.repository.CompilationRepository;
+import ru.practicum.repository.EventRepository;
 import ru.practicum.request.UpdateCompilationRequest;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
+@Slf4j
 public class CompilationServiceImpl implements CompilationService {
 
     private final CompilationRepository compilationRepository;
-    private final EventClient eventClient;
+    private final EventRepository eventRepository;
+    private final CategoryRepository categoryRepository;
+    private final UserClient userClient;
 
     @Override
     @Transactional
     public CompilationDto create(NewCompilationDto dto) {
+        Set<Event> events = new HashSet<>();
+        if (dto.getEvents() != null && !dto.getEvents().isEmpty()) {
+            events = new HashSet<>(eventRepository.findAllById(dto.getEvents()));
+        }
 
-        Set<Long> eventIds = dto.getEvents() != null
-                ? new HashSet<>(dto.getEvents())
-                : new HashSet<>();
-
-        Compilation c = Compilation.builder()
-                .title(dto.getTitle())
-                .pinned(dto.getPinned() != null ? dto.getPinned() : false)
-                .eventIds(eventIds)
-                .build();
-
+        Compilation c = CompilationMapper.toEntity(dto, events);
         return toDtoWithEvents(compilationRepository.save(c));
     }
 
     @Override
     @Transactional
     public CompilationDto update(Long compId, UpdateCompilationRequest dto) {
-
         Compilation c = compilationRepository.findById(compId)
                 .orElseThrow(() -> new NotFoundException("Compilation not found"));
 
         if (dto.getEvents() != null) {
-            c.setEventIds(new HashSet<>(dto.getEvents()));
+            c.setEvents(new HashSet<>(eventRepository.findAllById(dto.getEvents())));
         }
-
         if (dto.getPinned() != null) {
             c.setPinned(dto.getPinned());
         }
-
         if (dto.getTitle() != null && !dto.getTitle().isBlank()) {
             c.setTitle(dto.getTitle());
         }
@@ -77,35 +81,72 @@ public class CompilationServiceImpl implements CompilationService {
     public CompilationDto getById(Long compId) {
         Compilation c = compilationRepository.findById(compId)
                 .orElseThrow(() -> new NotFoundException("Compilation not found"));
-
         return toDtoWithEvents(c);
     }
 
     @Override
     public List<CompilationDto> getAll(Boolean pinned, Integer from, Integer size) {
-
         PageRequest page = PageRequest.of(from / size, size);
+        Page<Compilation> compilations;
 
-        Page<Compilation> compilations =
-                (pinned != null)
-                        ? compilationRepository.findAllByPinned(pinned, page)
-                        : compilationRepository.findAll(page);
+        if (pinned != null) {
+            compilations = compilationRepository.findAllByPinned(pinned, page);
+        } else {
+            compilations = compilationRepository.findAll(page);
+        }
 
         return compilations.getContent().stream()
                 .map(this::toDtoWithEvents)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private CompilationDto toDtoWithEvents(Compilation c) {
-
-        if (c.getEventIds() == null || c.getEventIds().isEmpty()) {
+        if (c.getEvents() == null || c.getEvents().isEmpty()) {
             return CompilationMapper.toDto(c, Collections.emptyList());
         }
 
-        List<EventShortDto> events = c.getEventIds().stream()
-                .map(eventClient::getEventShort)
-                .toList();
+        Set<Long> categoryIds = new HashSet<>();
+        Set<Long> userIds = new HashSet<>();
 
-        return CompilationMapper.toDto(c, events);
+        for (Event event : c.getEvents()) {
+            categoryIds.add(event.getCategoryId());
+            userIds.add(event.getInitiatorId());
+        }
+
+        List<Category> allCategories = categoryRepository.findAllById(categoryIds);
+        Map<Long, Category> categoriesMap = allCategories.stream()
+                .collect(Collectors.toMap(Category::getId, category -> category));
+
+        Map<Long, UserShortDto> usersMap = fetchUsers(userIds);
+
+        List<EventShortDto> eventDtos = c.getEvents().stream()
+                .map(event -> {
+                    Category cat = categoriesMap.get(event.getCategoryId());
+                    UserShortDto user = usersMap.get(event.getInitiatorId());
+
+                    CategoryDto catDto = cat != null ?
+                            new CategoryDto(cat.getId(), cat.getName()) : null;
+
+                    return EventMapper.toShort(event, catDto, user, 0L, 0L, null);
+                })
+                .collect(Collectors.toList());
+
+        return CompilationMapper.toDto(c, eventDtos);
+    }
+
+    private Map<Long, UserShortDto> fetchUsers(Set<Long> userIds) {
+        Map<Long, UserShortDto> usersMap = new HashMap<>();
+
+        for (Long userId : userIds) {
+            try {
+                UserShortDto user = userClient.getUserShortById(userId);
+                if (user != null) {
+                    usersMap.put(userId, user);
+                }
+            } catch (Exception e) {
+                log.warn("Could not fetch user with id {}: {}", userId, e.getMessage());
+            }
+        }
+        return usersMap;
     }
 }
